# Graphics

./: CMakeLists.txt  readme.md
include/: global.h  primitive.h  qube.h  star.h  teapot.h  texture.h  type.h
src/: main.cpp  primitive.cpp  qube.cpp  star.cpp  teapot.cpp  texture.cpp
test/: checker.cpp  double.cpp  hello.cpp  light.cpp  main.cpp  main_qube.cpp  main_star.cpp  main_teapot.cpp  main_textrue.cpp  perspective.cpp  qube.cpp
